--- a/SAPHana/man/SAPHanaSR.py.7
+++ b/SAPHana/man/SAPHanaSR.py.7
@@ -1,6 +1,6 @@
 .\" Version: 0.180.0
 .\"
-.TH SAPHanaSR.py 7 "22 Apr 2022" "" "SAPHanaSR-ScaleOut"
+.TH SAPHanaSR.py 7 "22 Aug 2022" "" "SAPHanaSR-ScaleOut"
 .\"
 .SH NAME
 SAPHanaSR.py \- Provider for SAP HANA srHook method srConnectionChanged().
@@ -137,7 +137,10 @@ Example SID is HA1.
 /hana/shared/$SID/global/hdb/custom/config/global.ini
 .br
 This file is needed at both sites. The HANA has to be stopped before the files
-can be edited. Do not copy the file between sites. Please check SAP HANA documentation for details. Do not forget to adapt the sudo permission, see examples above.
+can be edited. See manual page SAPHanaSR-manageProvider(8) for adding the HADR
+provider settings online. Do not copy the file between sites. Please check SAP
+HANA documentation for details. Do not forget to adapt the sudo permission, see
+examples above.
 .PP
 .RS 2
 [ha_dr_provider_SAPHanaSR]
@@ -217,19 +220,19 @@ If no log entry exists, either the srHook has not being loaded, or it did not ha
 .SH FILES
 .TP
 /usr/share/SAPHanaSR-ScaleOut/SAPHanaSR.py
- the hook provider, delivered with the RPM
+the hook provider, delivered with the RPM
 .TP
 /hana/shared/srhook/SAPHanaSR.pyc
- the hook provider, if pre-compiled for the particular HANA (optional)
+the hook provider, if pre-compiled for the particular HANA (optional)
 .TP
 /hana/shared/$SID/global/hdb/custom/config/global.ini
- the on-disk representation of HANA global system configuration
+the on-disk representation of HANA global system configuration
 .TP
 /etc/sudoers , /etc/sudoers.d/
- the sudo permissions configuration
+the sudo permissions configuration
 .TP
 /usr/sap/$SID/HDB$nr/$host/trace/
- the directory with HANA trace files
+the directory with HANA trace files
 .PP
 .\"
 .SH REQUIREMENTS 
@@ -271,7 +274,7 @@ Please report any other feedback and suggestions to feedback@suse.com.
 \fBSAPHanaSR-ScaleOut\fP(7) , \fBSAPHanaSrMultiTarget.py\fP(7) ,
 \fBocf_suse_SAPHanaTopology\fP(7) , \fBocf_suse_SAPHanaController\fP(7) ,
 \fBSAPHanaSR-monitor\fP(8) , \fBSAPHanaSR-manageAttr\fP(8) ,
-\fBSAPHanaSR-showAttr\fP(8) ,
+\fBSAPHanaSR-showAttr\fP(8) , \fBSAPHanaSR-manageProvider\fP(8) ,
 \fBcrm_attribute\fP(8) , \fBsudo\fP(8) , \fBsudoers\fP(5) , \fBpython\fP(8) ,
 .br
 https://documentation.suse.com/sbp/all/?context=sles-sap ,
