--- a/SAPHana/man/susTkOver.py.7
+++ b/SAPHana/man/susTkOver.py.7
@@ -1,6 +1,6 @@
 .\" Version: 0.160.1
 .\"
-.TH susTkOver.py 7 "08 Jul 2022" "" "SAPHanaSR"
+.TH susTkOver.py 7 "22 Aug 2022" "" "SAPHanaSR"
 .\"
 .SH NAME
 susTkOver.py \- Provider for SAP HANA srHook method preTakeover().
@@ -109,7 +109,8 @@ Example SID is HA1.
 /hana/shared/$SID/global/hdb/custom/config/global.ini
 .br
 This file is needed at both sites. The HANA has to be stopped before the files
-can be changed.
+can be changed. See manual page SAPHanaSR-manageProvider(8) for adding the HADR
+provider settings online.
 .PP
 .RS 2
 [ha_dr_provider_sustkover]
@@ -131,7 +132,8 @@ ha_dr_sustkover = info
 /hana/shared/$SID/global/hdb/custom/config/global.ini
 .br
 This file is needed at both sites. The HANA has to be stopped before the files
-can be edited.
+can be edited. See manual page SAPHanaSR-manageProvider(8) for adding the HADR
+provider settings online.
 .PP
 .RS 2
 [ha_dr_provider_sustkover]
@@ -238,7 +240,8 @@ Please report any other feedback and suggestions to feedback@suse.com.
 \fBSAPHanaSR.py\fP(7) , \fBSAPHanaSrMultiTarget.py\fP(7) ,
 \fBocf_suse_SAPHanaTopology\fP(7) , \fBocf_suse_SAPHana\fP(7) ,
 \fBocf_suse_SAPHanaController\fP(7) , 
-\fBSAPHanaSR-monitor\fP(8) , \fBSAPHanaSR-showAttr\fP(8) , \fBSAPHanaSR-hookHelper\fP(8) ,
+\fBSAPHanaSR-monitor\fP(8) , \fBSAPHanaSR-showAttr\fP(8) ,
+\fBSAPHanaSR-hookHelper\fP(8) , \fBSAPHanaSR-manageProvider\fP(8) ,
 \fBSAPHanaSR_maintenance_examples\fP(7) ,
 \fBcrm_attribute\fP(8) , \fBsudo\fP(8) , \fBsudoers\fP(5), \fBpython3\fP(8) ,
 .br
